# knot_recognition

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  USAGE.md  __main__.py  dataset.py  features.py  gauss_codes.csv  generate_gauss_codes.py  infer.py  mapping_example.csv  model.py  paper.bib  paper.md  preprocess.py  pyproject.toml  requirements.txt  train.py  utils.py
checkpoints/: hybrid_classifier.pth
data/: README.md
data/knotprot/: hybrid_manifest.csv
docs/: README.md  methods.md  reproducibility.md  scientific.md
docs/figures/: README.md  template_plot.py  visualizations.md
notebooks/: README.md
raw_knot/10_116/: 10_116_ML.gauss.txt
raw_knot/10_120/: Two-trefoils-10crossings.gauss.txt
raw_knot/10_121/: 10_121_ML.gauss.txt
raw_knot/10_122/: 10_122_AP.gauss.txt  10crossings-two-triquetras-joined.gauss.txt
raw_knot/10_127/: 10_127_AP.gauss.txt
raw_knot/10_128/: 10_128_AP.gauss.txt
raw_knot/10_131/: 10_131_AP.gauss.txt
raw_knot/10_132/: 10_132_ML.gauss.txt
raw_knot/10_133/: 10_133_ML.gauss.txt
raw_knot/10_136/: 10_136_AP.gauss.txt
raw_knot/10_137/: 10_137_AP.gauss.txt
raw_knot/10_138/: 10_138_AP.gauss.txt
raw_knot/10_140/: 10_140_ML.gauss.txt
raw_knot/10_141/: 10_141_AP.gauss.txt
raw_knot/10_144/: 10_144_ML.gauss.txt
results/: README.md  hybrid_training.csv
scripts/: README.md  build_knotprot_hybrid_dataset.py  download_knotprot.py  merge_hybrid_parts.py  train_hybrid_classifier.py
tests/: test_features.py  test_gauss_pd.py  test_protein_stage2.py  test_reidemeister_synthetic.py  test_solver_reduction.py
(+108 files in other folders)
